[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/Jar/Jar_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Jar/Jar.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/State.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Behaviours/DropperBehaviour.gd" type="Script" id=5]
[ext_resource path="res://Scenes/InteractiveObjects/Item/ItemData.gd" type="Script" id=6]
[ext_resource path="res://Resources/ItemDropWeight/void_weight.tres" type="Resource" id=7]
[ext_resource path="res://Resources/ItemDropWeight/MP_potion_weight.tres" type="Resource" id=8]
[ext_resource path="res://Scenes/InteractiveObjects/Item/ItemDropWeight/ItemDropWeight.gd" type="Script" id=9]
[ext_resource path="res://Scenes/InteractiveObjects/Item/Sprites/WorldItemsSpriteSheet.png" type="Texture" id=10]
[ext_resource path="res://Scenes/InteractiveObjects/Item/Sprites/InventoryItemSpriteSheet.png" type="Texture" id=11]
[ext_resource path="res://Resources/ItemDropWeight/Coin_weight.tres" type="Resource" id=12]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Break",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.28011

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="Resource" id=11]
script = ExtResource( 6 )
damage_type = 0
damage = -10
item_name = "Heal Potion"
description = "A potion that heals for 10 HP"
price = 10
world_texture = SubResource( 10 )
inventory_texture = SubResource( 9 )

[sub_resource type="Resource" id=12]
script = ExtResource( 9 )
item_data = SubResource( 11 )
weight = 20.0

[node name="Jar" type="StaticBody2D" groups=["Obstacle"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Idle"
offset = Vector2( 0.5, -3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Breaking" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Broken" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="DropperBehaviour" type="Node2D" parent="."]
script = ExtResource( 5 )
item_drop_weight_array = [ ExtResource( 7 ), SubResource( 12 ), ExtResource( 8 ), ExtResource( 12 ) ]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
